<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarControlActivity">

    <SeekBar
        android:id="@+id/speedBar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="388dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speedText"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:text="@string/label_speed"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/speedBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/servoText"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:text="@string/label_servo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/servoBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedBar"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/servoBar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servoText" />

    <Button
        android:id="@+id/neutralBtn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="60dp"
        android:text="@string/button_neutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/talkingTo"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/label_talkingTo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F44336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/talkingTo" />

</androidx.constraintlayout.widget.ConstraintLayout>